# kumou

./: .gitmodules  CLAUDE.md  Cargo.toml  justfile
apps/dialogue/: Cargo.toml  Dioxus.toml
apps/dialogue/assets/: tailwind.css
apps/dialogue/assets/data/: japanese-daily-dialogue
apps/dialogue/assets/styling/: dialogue.css  main.css
apps/dialogue/data/: dialogues.json
apps/dialogue/src/: lib.rs  main.rs  server_fns.rs
apps/dialogue/src/components/: mod.rs  sentence_analysis.rs  speak_button.rs
apps/dialogue/src/views/: dialogue_detail.rs  mod.rs  navbar.rs  topic_dialogues.rs  topic_list.rs
crates/kumou-japanese/: Cargo.toml
crates/kumou-japanese/src/: dialogue.rs  error.rs  lib.rs  tokenizer.rs
