[workspace]
members = [
    "crates/*",
    "apps/*", "apps/dialogue",
]
exclude = [
]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
homepage = "https://kumou.edger.dev"
repository = "https://github.com/edger-dev/kumou"
authors = ["YJ Park <yjpark@gmail.com>"]

[workspace.dependencies]

# Crates
kumou-core = { path = "crates/kumou-core", version = "0.1.0-dev" }
kumou-japanese = { path = "crates/kumou-japanese", version = "0.1.0-dev" }

# Utils
log = { version = "0.4.29", features = ["kv"] }
fastrace = "0.7.16"
rootcause = "0.11.1"
facet = "0.43.2"

# Tests
rstest = "0.26.1"

# Web
dioxus = { version = "0.7.3" }
