[package]
name = "dialogue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]
tokenizer = ["kumou-japanese/tokenizer"]

[dependencies]
dioxus = { workspace = true, features = ["fullstack", "router"] }
kumou-japanese = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
