[package]
name = "kumou-japanese"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
lindera = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
