[package]
name = "kumou-japanese"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tokenizer = ["lindera"]

[dependencies]
lindera = { version = "2.1.1", features = ["embed-ipadic"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
